Fixed Header  label for sub totals and expand and collapse.

--- a/BudgetApp/war/css/style.css
+++ b/BudgetApp/war/css/style.css
@@ -78,7 +78,7 @@ div.dhtmlx_window_active,div.dhx_modal_cover_dv {
 	top: 1px;
 }
 
-#sattusMessage {
+#statusMessage {
 	font: Arial;
 	font-weight: bold;
 	font-size: 14px;
